# argus-fraud-detection

./: .env.example  .gitignore  LICENSE  OPTIMIZATION_PLAN.md  README-MODEL-SWITCHING.md  README.md  confluent.properties.example  docker-compose.yml  presentation.html  preso.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  test_dashboard.py
agent/: consumer.py  processor.py  rag.py  rag_integration.py  together_client.py
dashboard/: app.py
demo/: walkthrough.md
producer/: generator.py  transaction_generator.py
scripts/: check_credentials.py  check_env.py  debug_confluent_auth.py  debug_dashboard.py  list_topics.py  minimal_producer.py  run_e2e_tests.sh  simple_test.py  switch_model.py  test_confluent_connection.py  test_escaping.py  test_kafka_python.py  test_models.py  test_producer_config.py  test_send_message.py  test_serverless_models.py  verify_credentials.py
tests/: conftest.py  e2e_test.py
tools/: fraud_detection.py  functions.py  notification.py  risk_analysis.py
